@@ -108,6 +108,9 @@ option process_output_tail : int = 40
 option checkpoint : bool = false
   -- "checkpoint for theories during build process (heap compression)"
 
+option profiling : string = ""
+  -- "ML profiling (possible values: time, allocations)"
+
 
 section "ML System"
 
