@@ -1033,6 +1033,9 @@ management of isabelle build. This is relevant for big sessions that may
 exhaust the small 32-bit address space of the ML process (which is used
 by default).
 
+* System option "profiling" specifies the mode for global ML profiling
+in "isabelle build". Possible values are "time", "allocations".
+
 * System option "ML_process_policy" specifies an optional command prefix
 for the underlying ML process, e.g. to control CPU affinity on
 multiprocessor systems. The "isabelle jedit" tool allows to override the
